--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Welcome to Connect 4!</h1>
+    <h4>The rules are simple: Try to build a row of four pieces while keeping your opponent from doing the same.</h4>
+    <h5>Click in the gray box above the column to place a piece in that column</h5>
     <div id="game">
         <table id="board"></table>
     </div>
 
- <script src="app.js"></script>   
+ <script src="app2.js"></script>   
 </body>
 </html>
